# LogMaster

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
scripts/: copy-portable.mjs  kill-port.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: filter.rs  fs.rs  lib.rs  log_file.rs  main.rs  search.rs  settings.rs  tail.rs  watcher.rs
src/components/: BookmarksPanel.tsx  CommandPalette.tsx  DropdownMenu.tsx  FileExplorer.tsx  FilterBanner.tsx  FolderBrowser.tsx  LineContextMenu.tsx  LogView.tsx  ResizableLeftPanel.tsx  ResizableSidePanel.tsx  RulesPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TabBar.tsx  TopBar.tsx  Welcome.tsx
src/hooks/: useFileDrop.ts  useFileWatchdog.ts  useFilter.ts  useSearch.ts
src/lib/: dialog.ts  ipc.ts  utils.ts  window.ts
src/store/: app.ts  recent.ts  ruleLibrary.ts  settings.ts
src/styles/: globals.css
